Add syntax highlighting

--- a/.nanorc
+++ b/.nanorc
@@ -263,8 +263,8 @@
 ## them easier to remember and faster to type using nano's -Y option.
 ##
 ## To include all existing syntax definitions, you can do:
-# include "/usr/share/nano/*.nanorc"
-
+#include "/usr/share/nano/*.nanorc"
+include "/usr/share/nano-syntax-highlighting/*.nanorc"
 
 ## Key bindings.
 ## See nanorc(5) (section REBINDING KEYS) for more details on this.
