Update cosmetics of config file

--- a/compton.conf
+++ b/compton.conf
@@ -1,20 +1,13 @@
-# Thank you code_nomad: http://9m.no/ꪯ鵞
-
-#################################
-#
-# Backend
-#
-#################################
-
+┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
+┃ Backend 
+┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 # Backend to use: "xrender" or "glx".
 # GLX backend is typically much faster but depends on a sane driver.
 backend = "glx";
 
-#################################
-#
-# GLX backend
-#
-#################################
+┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
+┃ GLX backend 
+┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 
 glx-no-stencil = true;
 
@@ -49,11 +42,9 @@ glx-copy-from-front = false;
 # Defaults to undefined.
 glx-swap-method = "undefined";
 
-#################################
-#
-# Shadows
-#
-#################################
+┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
+┃ Shadows 
+┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 
 # Enabled client-side shadows on windows.
 shadow = true;
@@ -103,11 +94,9 @@ shadow-exclude = [
 # Avoid drawing shadow on all shaped windows (see also: --detect-rounded-corners)
 shadow-ignore-shaped = false;
 
-#################################
-#
-# Opacity
-#
-#################################
+┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
+┃ Opacity 
+┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 
 menu-opacity = 1;
 inactive-opacity = 1;
@@ -131,11 +120,9 @@ blur-background-exclude = [
     "window_type = 'desktop'"
 ];
 
-#################################
-#
-# Fading
-#
-#################################
+┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
+┃ Fading 
+┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 
 # Fade windows during opacity changes.
 fading = true;
@@ -151,11 +138,9 @@ fade-out-step = 0.03;
 # Specify a list of conditions of windows that should not be faded.
 fade-exclude = [ ];
 
-#################################
-#
-# Other
-#
-#################################
+┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
+┃ Other 
+┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 
 # Try to detect WM windows and mark them as active.
 mark-wmwin-focused = true;
@@ -211,11 +196,9 @@ detect-transient = true;
 # WM_TRANSIENT_FOR has higher priority if --detect-transient is enabled, too.
 detect-client-leader = true;
 
-#################################
-#
-# Window type settings
-#
-#################################
+┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
+┃ Window type settings
+┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 
 wintypes:
 {
