Autostart polybar and redshift

--- a/i3/config
+++ b/i3/config
@@ -30,13 +30,11 @@ font pango:Work Sans 10
 # X core fonts rendering does not support right-to-left and this being a bitmap
 # font, it doesn’t scale on retina/hidpi displays.
 
-# ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
-# ┃ Autostart.                                                                ┃
-# ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
-
-# ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
-# ┃ General.                                                                  ┃
-# ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
+# ┏━━━━━━━━━━━━━━━━━━━━━━━━┓
+# ┃ Autostart
+# ┗━━━━━━━━━━━━━━━━━━━━━━━━┛
+exec_always --no-startup-id $XDG_CONFIG_HOME/polybar/launch.sh
+exec --no-startup-id redshift
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
