--- a/i3/config
+++ b/i3/config
@@ -42,18 +42,8 @@ exec --no-startup-id redshift
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
-# start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
-
 # kill focused window
 bindsym $mod+Shift+q kill
-
-# start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
-# There also is the (new) i3-dmenu-desktop which only displays applications
-# shipping a .desktop file. It is a wrapper around dmenu, so you need that
-# installed.
-# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
 # change focus
 bindsym $mod+h focus left
@@ -198,3 +188,15 @@ client.urgent           $urgent-bg-colour   $urgent-bg-colour   $text-colour    
 #gaps inner 10
 #gaps outer 0
 #smart_gaps on
+
+# ┏━━━━━━━━━━━━━━━━━━━━━━━━┓
+# ┃ Application shortcuts
+# ┗━━━━━━━━━━━━━━━━━━━━━━━━┛
+bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+d exec rofi -show run
+# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+ctrl+g exec "google-chrome-stable"
+assign [class="Google-chrome"] $workspace01
+bindsym $mod+ctrl+caps_lock exec "i3-sensible-terminal -e ranger"
+#bindsym $mod+ctrl+b exec urxvt -e lock.sh -name lock
+#assign [title="lock.sh"] $workspace07
