Add media key support

--- a/i3/config
+++ b/i3/config
@@ -164,6 +164,14 @@ bindsym $mod+r mode "resize"
 #        status_command i3status
 #}
 
+# Pulse Audio controls
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5%
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5%
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle
+bindsym XF86AudioPlay exec --no-startup-id playerctl play-pause
+bindsym XF86AudioNext exec --no-startup-id playerctl next
+bindsym XF86AudioPrevious exec --no-startup-id playerctl previous
+bindsym XF86AudioStop exec --no-startup-id playerctl stop
 
 # ┏━━━━━━━━━━━━━━━━━━━━━━━━┓
 # ┃ Colours
