--- a/i3/config
+++ b/i3/config
@@ -188,7 +188,6 @@ client.unfocused        $inactive-bg-colour $inactive-bg-colour $inactive-text-c
 client.focused_inactive $inactive-bg-colour $inactive-bg-colour $inactive-text-colour $indicator-colour
 client.urgent           $urgent-bg-colour   $urgent-bg-colour   $text-colour          $indicator-colour
 
-
 # ┏━━━━━━━━━━━━━━━━━━━━━━━━┓
 # ┃ i3 gaps
 # ┗━━━━━━━━━━━━━━━━━━━━━━━━┛
@@ -200,10 +199,18 @@ client.urgent           $urgent-bg-colour   $urgent-bg-colour   $text-colour    
 # ┃ Application shortcuts
 # ┗━━━━━━━━━━━━━━━━━━━━━━━━┛
 bindsym $mod+Return exec i3-sensible-terminal
+
 bindsym $mod+d exec rofi -show run
-# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+#bindsym $mod+Shift+d exec "rofi -show drun -run-command 'gksudo {cmd}'"
+#bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+
 bindsym $mod+ctrl+g exec "google-chrome-stable"
 assign [class="Google-chrome"] $workspace01
-bindsym $mod+ctrl+caps_lock exec "i3-sensible-terminal -e ranger"
+
+bindsym $mod+Ctrl+e exec "i3-sensible-terminal -e ranger"
+
 #bindsym $mod+ctrl+b exec urxvt -e lock.sh -name lock
 #assign [title="lock.sh"] $workspace07
+
+bindsym Print exec --no-startup-id "fish -c screenshot"
+bindsym $mod+F7 exec --no-startup-id "fish -c switchaudio"
