--- a/neofetch/config
+++ b/neofetch/config
@@ -19,6 +19,7 @@ print_info() {
     info "Resolution" resolution
     info "DE" de
     info "WM" wm
+    info "Font" font
     info "WM Theme" wm_theme
     info "Theme" theme
     info "Icons" icons
@@ -31,7 +32,6 @@ print_info() {
     # info "CPU Usage" cpu_usage
     # info "Disk" disk
     # info "Battery" battery
-    # info "Font" font
     # info "Song" song
     # info "Local IP" local_ip
     # info "Public IP" public_ip
@@ -70,7 +70,7 @@ kernel_shorthand="on"
 # Values:   'on', 'off', 'tiny'
 # Flag:     --distro_shorthand
 # Supports: Everything except Windows and Haiku
-distro_shorthand="off"
+distro_shorthand="on"
 
 # Show/Hide OS Architecture.
 # Show 'x86_64', 'x86' and etc in 'Distro:' output.
