--- a/sway/config
+++ b/sway/config
@@ -34,9 +34,7 @@ set $menu dmenu_run
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 output DVI-I-1 pos 0,0 res 1920x1080
 output HDMI-A-1 pos 1920,0 res 1920x1080
-
-# Default wallpaper (more resolutions are available in /usr/share/sway/)
-output * bg /usr/share/sway/Sway_Wallpaper_Blue_1920x1080.png fill
+output * bg 000000 solid_color
 
 
 # ┏━━━━━━━━━━━━━━━━━━━━━━━━┓
