--- a/sway/config
+++ b/sway/config
@@ -217,7 +217,7 @@ assign [class="Google-chrome"] $workspace01
 
 bindsym $mod+Ctrl+e exec $term ranger
 
-bindsym $mod+ctrl+b exec i3lock --ignore-empty-password --show-failed-attempts --color=000000
+bindsym $mod+ctrl+b exec swaylock --color 000000 --insidecolor 4B0082
 
 bindsym Print exec --no-startup-id fish -c screenshot
 
