Add function to check running vs installed kernel ver, other minor changes

--- a/i3status-rust/.config/i3status-rust/config.toml
+++ b/i3status-rust/.config/i3status-rust/config.toml
@@ -17,7 +17,7 @@ player = "mpd"
 buttons = ["play", "prev", "next"]
 marquee_speed = 0.075
 marquee_interval = 3
-max_width = 20
+max_width = 50
 
 [[block]]
 block = "disk_space"
@@ -30,9 +30,19 @@ warning = 20.0
 alert = 10.0
 
 [[block]]
+block = "disk_space"
+path = "/mnt/hdd1"
+alias = "gen"
+info_type = "available"
+unit = "GB"
+interval = 20
+warning = 20.0
+alert = 10.0
+
+[[block]]
 block = "memory"
 display_type = "memory"
-format_mem = "{Mup}%"
+format_mem = "{Mum}MB({Mup}%)"
 format_swap = "{SUp}%"
 
 [[block]]
@@ -43,6 +53,10 @@ interval = 1
 block = "load"
 interval = 1
 format = "{1m}"
+
+[[block]]
+block = "net"
+device = "enp3s0"
 
 [[block]]
 block = "custom"
@@ -66,3 +80,7 @@ on_click = "fish --command=ibus-toggle"
 block = "custom"
 interval = 5
 command = "dropbox-cli status"
+
+[[block]]
+block = "custom"
+command = "fish --command=check_kernel"
