--- a/i3status-rust/.config/i3status-rust/config.toml
+++ b/i3status-rust/.config/i3status-rust/config.toml
@@ -1,23 +1,33 @@
-theme = "solarized-dark"
-icons = "awesome"
+[icons]
+# Choices: none, awesome, material
+name = "awesome"
 
-[[block]]
-block = "custom"
-command = "uptime --pretty | sed -E 's/ week(s)?,/w/g; s/ day(s)?,/d/; s/ hour(s)?,/h/; s/ minute(s)?/m/'"
-interval = 600
-on_click = "true"
+[theme]
+# Choices: plain, solarized-dark, slick
+name = "solarized-dark"
+[theme.overrides]
+#separator = "<span font='DejaVu Mono Sans 10'>█</span>"
+#separator = "<span font='DejaVu Mono Sans 12'></span>"
+#separator_fg = "#ffffff"
+separator_bg = "auto"
 
 [[block]]
 block = "pacman"
 interval = 600
 
 [[block]]
+block = "custom"
+command = "uptime --pretty | sed --regexp-extended 's/ week(s)?,/w/g; s/ day(s)?,/d/; s/ hour(s)?,/h/; s/ minute(s)?/m/'"
+interval = 600
+on_click = "true"
+
+[[block]]
 block = "music"
 player = "mpd"
 buttons = ["play", "prev", "next"]
-marquee_speed = 0.075
+marquee_speed = 0.1
 marquee_interval = 3
-max_width = 50
+max_width = 30
 
 [[block]]
 block = "disk_space"
@@ -62,25 +72,35 @@ device = "enp3s0"
 block = "custom"
 command = "fish --command='echo $SOUND_SOURCE'"
 interval = 5
+on_click = "fish --command='switchaudio'"
 
 [[block]]
 block = "sound"
 
 [[block]]
-block = "time"
-interval = 1
-format = "%a %d/%m %H:%M:%S"
-
-[[block]]
-block = "custom"
-command = "fish --command=ime_status"
-on_click = "fish --command=ibus-toggle"
-
-[[block]]
 block = "custom"
 interval = 5
-command = "dropbox-cli status"
+command = "dropbox-cli status | head --bytes=4"
 
 [[block]]
 block = "custom"
 command = "fish --command=check_kernel"
+
+[[block]]
+block = "custom"
+# Show number of X11 apps running
+command = "xlsclients | wc --lines | while read line; do echo \"X clients: $line\"; done"
+interval = 5
+
+#[[block]]
+#block = "ibus"
+
+#[[block]]
+#block = "weather"
+#format = "{temp}° {wind}m/s {direction}"
+#service = { name = "openweathermap", api_key = "3bddca882b9b2c3e463785fb9f0df35d", city_id = "1862627", units = "metric" }
+
+[[block]]
+block = "time"
+interval = 1
+format = "%a %d/%m %H:%M:%S"
