Remove unused services, update kitty config

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -11,7 +11,11 @@ font_size 10.0
 # ┏━━━━━━━━━━━━━━━━━━━━━━━
 # ┃ Appearance
 # ┗━━━━━━━━━━━━━━━━━━━━━━━
+background #000000
+foreground #029A20
 cursor #93a1a1
+url_color #0087BD
+url_style curly
 
 # ┏━━━━━━━━━━━━━━━━━━━━━━━
 # ┃ Behaviour
@@ -20,3 +24,5 @@ map ctrl+shift+c copy_to_clipboard
 map ctrl+shift+v paste_from_clipboard
 map ctrl+shift+plus change_font_size all +2.0
 map ctrl+shift+minus change_font_size all -2.0
+
+
