Re-enable xrdb for rofi config

--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -280,6 +280,7 @@ include /etc/sway/config.d/*
 # ┗━━━━━━━━━━━━━━━━━━━━━━━━┛
 exec systemctl --user start mako.service
 
+# rofi settings are inside xresources
 exec xrdb -merge $XDG_CONFIG_HOME/X11/xresources
 
 exec udiskie --tray &
